feat(ar): durable ledger + durable idempotency (PR-09, PR-10)
PR-09 Durable ledger:
- LedgerEntryEntity JPA mapped to ar_ledger_entry (account as enum name,
  debit/credit split, transaction_id/reference fields for domain model)
- LedgerMapper domain <-> entity
- LedgerRepositoryAdapter uses EntityManager (replaces ConcurrentHashMap)
- Auto-post ledger entries from IssueInvoiceService, RecordPaymentService,
  InvoiceLifecycleService.writeOff/issue, and ChequeResource clear/bounce

PR-10 Durable idempotency:
- IdempotencyEntity (tenant_id, key, request_hash, response_json, created_at)
- IdempotencyStore outbound port + JPA IdempotencyStoreAdapter
- PaymentAllocationService uses durable store instead of ConcurrentHashMap
- IssueInvoiceUseCase honors optional Idempotency-Key
- SQL migration docs/sql/002_idempotency.sql

Tests for adapters, mappers, and application posting/idempotency paths.