@@ -1,73 +1,100 @@
 package com.invoicegenie.ar.adapter.persistence.repository;
 
+import com.invoicegenie.ar.adapter.persistence.entity.LedgerEntryEntity;
+import com.invoicegenie.ar.adapter.persistence.mapper.LedgerMapper;
 import com.invoicegenie.ar.domain.model.ledger.Account;
+import com.invoicegenie.ar.domain.model.ledger.EntryType;
 import com.invoicegenie.ar.domain.model.ledger.LedgerEntry;
 import com.invoicegenie.ar.domain.model.ledger.LedgerRepository;
 import com.invoicegenie.shared.domain.TenantId;
 
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
-import java.util.stream.Collectors;
 
 /**
- * In-memory implementation of LedgerRepository for development.
- * In production, use a JPA-backed implementation.
+ * JPA-backed implementation of {@link LedgerRepository}.
  */
 @ApplicationScoped
 public class LedgerRepositoryAdapter implements LedgerRepository {
 
-    // In-memory storage: tenantId -> List<LedgerEntry>
-    private final ConcurrentMap<UUID, List<LedgerEntry>> storage = new ConcurrentHashMap<>();
+    @PersistenceContext
+    EntityManager em;
+
+    private final LedgerMapper mapper = new LedgerMapper();
 
     @Override
+    @Transactional
     public void save(TenantId tenantId, LedgerEntry entry) {
-        storage.computeIfAbsent(tenantId.getValue(), k -> new ArrayList<>()).add(entry);
+        em.merge(mapper.toEntity(tenantId, entry));
     }
 
     @Override
+    @Transactional
     public void saveAll(TenantId tenantId, List<LedgerEntry> entries) {
-        storage.computeIfAbsent(tenantId.getValue(), k -> new ArrayList<>()).addAll(entries);
+        for (LedgerEntry entry : entries) {
+            em.merge(mapper.toEntity(tenantId, entry));
+        }
     }
 
     @Override
     public Optional<LedgerEntry> findByTenantAndId(TenantId tenantId, UUID id) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(e -> e.getId().equals(id))
-                .findFirst();
+        LedgerEntryEntity e = em.find(LedgerEntryEntity.class, id);
+        if (e == null || !e.getTenantId().equals(tenantId.getValue())) {
+            return Optional.empty();
+        }
+        return Optional.of(mapper.toDomain(e));
     }
 
     @Override
     public List<LedgerEntry> findByTenantAndTransactionId(TenantId tenantId, UUID transactionId) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(e -> e.getTransactionId().equals(transactionId))
-                .collect(Collectors.toList());
+        return em.createQuery(
+                        "SELECT e FROM LedgerEntryEntity e WHERE e.tenantId = :tenantId AND e.transactionId = :txId",
+                        LedgerEntryEntity.class)
+                .setParameter("tenantId", tenantId.getValue())
+                .setParameter("txId", transactionId)
+                .getResultStream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
     public List<LedgerEntry> findByTenantAndReference(TenantId tenantId, String referenceType, UUID referenceId) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(e -> referenceType.equals(e.getReferenceType()) && referenceId.equals(e.getReferenceId()))
-                .collect(Collectors.toList());
+        return em.createQuery(
+                        "SELECT e FROM LedgerEntryEntity e WHERE e.tenantId = :tenantId "
+                                + "AND e.referenceType = :refType AND e.referenceId = :refId",
+                        LedgerEntryEntity.class)
+                .setParameter("tenantId", tenantId.getValue())
+                .setParameter("refType", referenceType)
+                .setParameter("refId", referenceId)
+                .getResultStream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
     public BigDecimal getAccountBalance(TenantId tenantId, Account account, String currencyCode) {
-        List<LedgerEntry> entries = storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(e -> e.getAccount() == account && e.getAmount().getCurrencyCode().equals(currencyCode))
-                .collect(Collectors.toList());
+        List<LedgerEntryEntity> entries = em.createQuery(
+                        "SELECT e FROM LedgerEntryEntity e WHERE e.tenantId = :tenantId "
+                                + "AND e.account = :account AND e.currency = :currency",
+                        LedgerEntryEntity.class)
+                .setParameter("tenantId", tenantId.getValue())
+                .setParameter("account", account.name())
+                .setParameter("currency", currencyCode)
+                .getResultList();
 
         BigDecimal balance = BigDecimal.ZERO;
-        for (LedgerEntry entry : entries) {
-            if (entry.getEntryType().name().equals("DEBIT")) {
-                balance = balance.add(entry.getAmount().getAmount());
+        for (LedgerEntryEntity e : entries) {
+            LedgerEntry domain = mapper.toDomain(e);
+            if (domain.getEntryType() == EntryType.DEBIT) {
+                balance = balance.add(domain.getAmount().getAmount());
             } else {
-                balance = balance.subtract(entry.getAmount().getAmount());
+                balance = balance.subtract(domain.getAmount().getAmount());
             }
         }
         return balance;
